projetos/local/nexus-dashboard-webapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-dashboard-webapp
  labels:
    environment: local
