projetos/local/nexus-dashboard-webapp/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-cert-ref
  namespace: nexus-dashboard-webapp
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: nginx-gateway
  to:
    - group: ""
      kind: Secret
