projetos/local/nexus-dashboard-webapp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-dashboard-webapp-route
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: tech-https
  hostnames:
  - "dashboard.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-dashboard-webapp-service
      port: 80
